<resources>
    <string name="app_name">CSE5236-Sphere</string>
    <string name="action_settings">Settings</string>
    <string name="no_sphere_found">No Sphere Found</string>
    <string name="CreateNewSphere"><u>Create New Sphere</u></string>
    <string name="ImportSphere"><u>Import Sphere</u></string>
    <string name="EnterSphereName">Enter Sphere Name</string>
    <string name="EnterSphereNameAndSubdivisions">Enter Sphere Name and Subdivisions</string>
    <string name="Create">Create</string>
    <string name="Import">Import</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Mutate">Mutate</string>
    <string name="MySpheres">My Spheres</string>
    <string name="NewSphere">New Sphere</string>
    <string name="CreateNew">Create New</string>
    <string name="Settings">Settings</string>
    <string name="Export">Export</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="DeleteOnDeviceData">Delete On Device Data</string>
    <string name="SphereFragmentName">SphereFragment</string>
    <string name="RecyclerItemDelete">Delete</string>
    <string name="RecyclerItemLoad">Load</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="selected_sphere">SELECTED_SPHERE</string>
    <string name="sphere_snapshot">Sphere Snapshot</string>
    <string name="not_set">not set</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">You may not delete your only sphere</string>
    <string name="rename">Rename</string>
    <string name="test">test</string>
    <string name="toolbar_import_sphere">Import Sphere</string>
    <string name="toolbar_my_spheres">My Spheres</string>
    <string name="toolbar_new_sphere">New Sphere</string>
    <string name="toolbar_no_spheres">No Spheres</string>
    <string name="toolbar_settings">Settings</string>
    <string name="gps_summary">Uses your latitude/longitude to mutate the sphere</string>
    <string name="delete_sphere">Delete Sphere</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_back">Back</string>
    <string name="rename_sphere">Rename Sphere</string>
    <string name="enter_name">Please enter a sphere name</string>
    <string name="enter_subs">Please choose a subdivision</string>
    <string name="ambient_temp_unsupported">Device does not support Ambient Temperature</string>
    <string name="ask_delete_device_data">Delete all on device data? - This will close the app</string>
    <string name="seed">seed</string>
    <string name="subdivisions">subdivisions</string>
    <string name="gps_warning">Give Location Permissions to use GPS data or disable "Use GPS data" in settings</string>
    <string name="no_sensors_warning">Enable at least one sensor in settings before mutating</string>
    <string name="export_sphere">Export Sphere</string>
    <string name="exported">Exported</string>
    <string name="export_failure">failed to export, check your network connection and try again</string>
    <string name="imported">Imported</string>
    <string name="does_not_exist">does not exist.</string>
    <string name="read_failure">failed to be read, check your network connection and try again</string>
    <string name="deleted">Deleted</string>
    <string name="delete_failure">failed to be deleted, check your network connection and try again</string>
</resources>