<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_sphere_fragment"
    android:name="NoSphereFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:clickable="true"
    android:focusable="true"
    tools:context="com.sphere.menu_fragments.NoSphereFragment">

    <Toolbar
        android:id="@+id/no_sphere_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:title="@string/toolbar_no_spheres"
        android:titleTextAppearance="@style/Toolbar.TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_sphere_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:text="@string/no_sphere_found"
        android:textColor="@color/menu_text_color"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_new_sphere_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="129dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/CreateNewSphere"
        android:textColor="@color/menu_clickable"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_sphere_found_text" />

    <TextView
        android:id="@+id/import_sphere_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/ImportSphere"
        android:textColor="@color/menu_clickable"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_new_sphere_text" />
</androidx.constraintlayout.widget.ConstraintLayout>