<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:clickable="true"
    android:focusable="true"
    tools:context="com.sphere.menu_fragments.ImportSphereFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/import_sphere_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:title="@string/toolbar_import_sphere"
        android:titleTextAppearance="@style/Toolbar.TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toolbar_import_sphere"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/import_sphere_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/import_sphere_toolbar"
        app:layout_constraintStart_toStartOf="@+id/import_sphere_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/EnterSphereName"
        android:textColor="@color/menu_text_color"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/import_sphere_toolbar"
        app:layout_constraintVertical_bias="0.15000002" />

    <EditText
        android:id="@+id/sphere_name_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:gravity="center"
        android:textColor="@color/menu_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/import_sphere_toolbar"
        app:layout_constraintVertical_bias="0.45"
        android:autofillHints="Sphere Name to Import" />

    <Button
        android:id="@+id/import_sphere_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Import"
        android:textColor="@color/menu_button_color"
        android:backgroundTint="@color/menu_clickable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sphere_name_input"
        app:layout_constraintVertical_bias="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>